# docs-chunker

./: .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  LLM_INTEGRATION_PLAN.md  Makefile  PRE_COMMIT_SETUP.md  README.md  pyproject.toml
.github/workflows/: ci.yml
documents/: תקנון תשפו- טיוטה.docx
output/contract/chunks/: 001_introduction.md  002_סעיף-1.md
output/demo/: demo.md
output/demo/chunks/: 003_b.md
output/end2end/: end2end.md
output/end2end/chunks/: 001_כותרת.md  002_a.md  003_סעיף-2.md
output/example/: example.md
output/example/chunks/: 001_כותרת-ראשית.md  002_section-1.md
output/mix/: mix.md
output/mix/chunks/: 001_title.md  002_a.md  003_ב.md
output/תקנון תשפו- טיוטה/: תקנון תשפו- טיוטה.md
output/תקנון תשפו- טיוטה/chunks/: 001_נהלי-הוראה-ולימודים-אוניברסיטאיים.md  002_הקדמה.md  003_135-זיכויים-אקדמיים-לתואר-מוסמך-39-toc83818200.md  004_1-תלמיד-באוניברסיטה-העברית.md  005_15-תלמיד-מן-המניין.md  006_19-תלמיד-מיוחד-שלא-לקראת-תואר.md  007_112-תלמיד-המשתתף-בתכנית-לחילופי-סטודנטים.md  008_2-תארים.md  009_22-תואר-מוסמך-אוניברסיטה-תואר-שני.md  010_24-דוקטור-לרפואה-md-ודוקטור-לרפואת-שיניים-dmd.md  011_3-מסלול-הלימודים.md  012_33-מסלול-ישיר-לתואר-דוקטור.md  013_41-תוכנית-הלימודים-טופס-לימודים.md  014_42-שינויים-בתוכנית-הלימודים.md  015_5-לימודי-חובה-כלל-אוניברסיטאיים.md  016_52-לימודי-אנגלית.md  017_53-אבני-פינה.md  018_55-קבלת-נז-בגין-מעורבות-חברתית.md  019_62-חובת-השתתפות-בקורסים.md  020_63-מכסת-הקורסים.md  021_66-קורסים-מוגבלי-משתתפים.md  022_610-נקודות-זכות.md  023_611-קורסי-קיץ.md  024_72-מועדי-הבחינות-קביעת-לוח-הבחינות-ופרסומו.md  025_73-שאלוני-הבחינות.md  026_75-ניהול-הבחינה.md  027_76-התאמות-מיוחדות.md  028_78-בדיקת-הבחינות.md  029_79-פרסום-ציונים.md  030_712-שמירת-בחינות-והחזרתן.md  031_715-בחינות-בינייםבחנים.md  032_8-מטלות-בכתב.md  033_82-מועד-ההגשה.md  034_83-בדיקת-מטלות-בכתב-ומועד-החזרתן.md  035_84-שמירת-עבודות-והחזרתן.md  036_86-אחריות-התלמיד-לעבודתו.md  037_91-ציונים-הנכללים-בממוצע.md  038_10-חזרה-על-קורס.md  039_102-פטור-מחובות-שוטפים.md  040_12-משך-הלימודים-הפסקת-לימודים-וחידושם.md  (+196 more)
scripts/: cleanup-committed-files.sh
src/docs_chunker/: __init__.py  chunk.py  cli.py  config.py  convert.py  io.py  llm.py  llm_providers.py  llm_strategy.py  structure.py  writer.py
src/docs_chunker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_chunk.py  test_chunk_writer.py  test_cli_chunk.py  test_cli_end_to_end.py  test_convert.py  test_e2e_docx.py  test_edge_cases.py  test_io.py  test_llm_providers.py  test_llm_strategy.py  test_llm_validator.py  test_structure.py
