 [tool.poetry]
 name = "docs-chunker"
 version = "0.1.0"
 authors = ["Noam <noam@example.com>"]
 description = "DOCX/PDF to Markdown and structure-aware chunking for RAG"
 readme = "README.md"
 packages = [{ include = "docs_chunker", from = "src" }]

 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
 markitdown = "^0.0.1"
 typer = {version = "^0.12.3", extras = ["all"]}
 pydantic = "^2.9.0"
 pyyaml = "^6.0.2"
 rich = "^13.9.2"
 fastapi = "^0.115.0"
 uvicorn = {version = "^0.30.6", optional = true}
 httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.9"
black = "^24.10.0"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
]

 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","PL"]
ignore = ["E203","E266","E501"]

 [tool.black]
 line-length = 100
 target-version = ["py310"]

 [tool.mypy]
 python_version = "3.10"
 strict = false
 warn_unused_configs = true
 warn_redundant_casts = true
 warn_unused_ignores = true
 check_untyped_defs = true
 ignore_missing_imports = true

 [tool.pytest.ini_options]
 minversion = "8.0"
 addopts = "-q"
 pythonpath = ["src"]
 testpaths = ["tests"]
